expand title of minimalism rule

--- a/artifacts_private/shared/about.html
+++ b/artifacts_private/shared/about.html
@@ -8,5 +8,5 @@
   <p>The list is limited to the 100 nearest use by date objects. Keeping these rules enables kept objects to be used
     either within the past 90 days or the coming 90 days. This approach is probably best used as a guideline rather
     than as a strict rule. <a href="https://www.theminimalists.com/ninety/" target='_blank'>The Minimalists' 90/90
-      Rule</a> inspired Jacob, operator of Steward Goods, to use these rules to track their possessions.</p>
+      Minimalism Rule</a> inspired Jacob, operator of Steward Goods, to use these rules to track their possessions.</p>
 </div>
